# jacky

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG-cli.md  CHANGELOG-orb.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  cliff.cli.toml  cliff.orb.toml  cliff.toml  codecov.yml  install.ps1  install.sh  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  release.yml
autobot-syscap/: Info.plist  Package.swift  README.md
autobot-syscap/Sources/autobot-syscap/: SystemAudioTap.swift  main.swift
docs/: PACKAGING.md  RELEASING.md  cli.html  getting-started.html  index.html  mcp-servers.md  robots.txt  sitemap.xml  style.css
docs/architecture/: design-reference.md
docs/plans/: autobot_active_workspace_plan.md  autobot_build_roadmap.md  autobot_cloud_llm_plan.md  autobot_floating_orb_ui_plan.md  autobot_meeting_minutes_plan.md  autobot_multi_step_tools_plan.md  autobot_system_toggles_plan.md  file_access_model.md  mcp-integration-design.md
docs/reference/: PACKAGING.md  RELEASING.md  coding-agent-cli.md
docs/superpowers/plans/: 2026-06-27-active-workspace.md  2026-06-27-multi-step-tools.md  2026-06-28-system-controls.md  2026-06-28-ui-architecture-refactor.md  2026-06-29-mcp-context-optimization-phase-1.md  2026-06-29-mcp-context-optimization-phase-2.md  2026-06-29-mcp-context-optimization-phase-3.md  2026-06-29-mcp-context-optimization-phase-4.md  2026-06-29-mcp-phase-1-core.md  2026-06-29-mcp-phase-2-bridge.md  2026-06-29-mcp-phase-3-token-auth.md  2026-06-29-mcp-phase-4-daemon.md  2026-06-29-mcp-phase-5-ui.md  2026-06-29-mcp-phase-6-oauth.md  2026-06-30-notes-manager.md  2026-07-01-meeting-minutes.md  2026-07-03-coding-agent-phase1-harness.md  2026-07-03-coding-agent-phase1b-sessions.md  2026-07-03-coding-agent-phase1c-any-llm.md  2026-07-03-coding-agent-phase2a-code-tools.md  2026-07-03-session-permission-grants.md  2026-07-04-coding-agent-phase2b-nav-exec.md  2026-07-04-coding-agent-phase2c-repomap.md  2026-07-04-coding-agent-phase2f-profile-cli.md
docs/superpowers/specs/: 2026-06-26-github-native-project-management-design.md  2026-06-28-ui-architecture-design.md  2026-06-29-mcp-context-optimization-design.md  2026-06-30-notes-tool-design.md  2026-07-03-coding-agent-design.md  2026-07-03-session-permission-grants-design.md  2026-07-04-coding-agent-plan-approve-act-design.md
docs/testing/: system-toggles-manual-test.md
docs/ui/: jack_meeting_minutes_prototype.html  jack_orb_prototype.html  mcp-ui-mockups.html
packaging/: autobot-daemon.spec  jack.spec  jack_entry.py  syscap.entitlements
scripts/: bump_version.py  dev-install.sh  record_demo_voice.py  validate_meeting.py
secrets/: oauth_clients.example.json
src/autobot/: __init__.py  __main__.py  app.py  cli.py  config.py  diagnostics.py  logging_setup.py  permissions.py  secrets.py  session_log.py  trust.py  update.py  voice_setup.py
src/autobot/agent/: __init__.py  chat_model.py  coder_turn.py  harness.py  plan_state.py  session.py  session_store.py  subagent.py
src/autobot/cli/: __init__.py  app.py  autoresume.py  classify.py  client.py  coder_commands.py  commands.py  config_cmd.py  config_ops.py  debug_report.py  diffview.py  driver.py  gitdiff.py  live_region.py  mcp_client.py  mcp_cmd.py  mcp_render.py  mcp_repl.py  mentions.py  paste.py  prompt.py  render.py  shell.py  skills_cmd.py  spinner.py  surface.py  theme.py  tui.py  workflows_cmd.py
src/autobot/core/: __init__.py  events.py  interfaces.py  streaming.py  types.py
src/autobot/daemon/: __init__.py  __main__.py  coder_events.py  pidfile.py  registry.py  runner.py  server.py  watchdog.py
src/autobot/e2e/: __init__.py  __main__.py  artifact.py  judge.py  markers.py  observe.py  pty_session.py  runner.py  scenario.py  settings_scope.py  workspace.py
src/autobot/io/: __init__.py  aec_mac.py  audio.py  endpointing.py  lazy_voice.py  listening.py  mic_tee.py  system_audio_mac.py  wake_vad.py
src/autobot/llm/: __init__.py  anthropic_llm.py  ollama_llm.py  reloadable.py
src/autobot/mcp/: __init__.py  adapter.py  approvals.py  auth.py  client_secrets.py  config.py  manager.py  provider.py  session.py
src/autobot/meeting/: __init__.py  recorder.py  state.py  store.py  summarizer.py  transcriber.py  wav.py
src/autobot/memory/: __init__.py  store.py
src/autobot/orchestrator/: __init__.py  checkpoint.py  state_machine.py  wake_gate.py
tests/: conftest.py
tests/integration/: echo_mcp_server.py  test_autoresume_e2e.py  test_hud_usage_e2e.py  test_lsp_integration.py  test_mcp_integration.py  test_subagent_e2e.py
tests/unit/: support.py  test_access.py  test_access_restore_cwd.py  test_access_trust.py  test_agent_harness.py  test_anthropic_llm.py  test_anthropic_llm_adapter.py  test_app_profile_overrides.py  test_app_selector.py  test_app_session_dir.py  test_app_workspace_root.py  test_apps.py  test_audit.py  test_backend_hint.py  test_barge_in_sensitivity.py  test_build_coder_profile.py  test_build_llm_harness.py  test_build_llm_openai.py  test_build_meetings_smoke.py  test_bump_version.py  test_chat_model_protocol.py  test_checkpoint.py  test_checkpoint_tool.py  test_cli.py  test_cli_app.py  test_cli_autoresume.py  test_cli_classify.py  test_cli_client.py  test_cli_client_config.py  test_cli_client_workspace.py  test_cli_coder_commands.py  test_cli_commands.py  test_cli_config_cmd.py  test_cli_config_ops.py  test_cli_diffview.py  test_cli_driver.py  test_cli_gitdiff.py  test_cli_hud.py  test_cli_live_region.py  test_cli_mcp_client.py  (+167 more)
ui/: package-lock.json  package.json  vitest.config.js
ui/orb/: about.html  chat.html  index.html  settings.html
ui/orb-shell/: README.md
ui/orb-shell/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
ui/orb-shell/src-tauri/capabilities/: chat.json  default.json
ui/orb-shell/src-tauri/src/: commands.rs  engine.rs  main.rs  platform.rs  shortcuts.rs  tray.rs  windows.rs
(+144 files in other folders)
