[project]
name = "autobot"
version = "0.6.3"
description = "A local, privacy-first, English-only voice assistant."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mohamed Jakkariya" }]
keywords = ["voice-assistant", "local", "privacy", "stt", "llm", "ollama"]

# Runtime dependencies. Heavy model runtimes are imported lazily in their
# modules so that tooling and unit tests do not need them installed.
dependencies = [
    "numpy>=1.24",
    "faster-whisper>=1.0.0", # English-only STT (CTranslate2 backend)
    "sounddevice>=0.4.6",    # mic capture; bundles PortAudio in its wheel
    "ollama>=0.4.0",         # local LLM client with tool calling
    "keyring>=25",           # cross-platform OS secret store (Keychain/Credential Locker/Secret Service)
]

[project.optional-dependencies]
# Hands-free listening (Phase 2). onnxruntime-only — both the wake word and the VAD
# run on ONNX (we vendor silero's ONNX model and run it directly, avoiding the
# silero-vad package's torch + torchaudio dependency, ~half a gig once frozen).
# Opt-in: `uv sync --extra wake`. Push-to-talk needs none of this.
wake = [
    "openwakeword>=0.6.0",
    "onnxruntime>=1.17",
]
# Voice output (Phase 3). Piper synthesizes speech on-device (CPU).
tts = [
    "piper-tts>=1.2",
]
# Everything needed to actually run hands-free with voice: `uv sync --extra all`.
# Deliberately excludes 'web' — that one leaves the device and stays opt-in.
all = [
    "autobot[wake,tts]",
]
# Web search (opt-in; the only off-device feature). `uv sync --extra web`.
web = [
    "ddgs>=6.0",
]
# Headless daemon (Phase 3c): a localhost WebSocket UI clients connect to.
# Imported lazily, so only needed to run the daemon: `uv sync --extra daemon`.
daemon = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
# Optional cloud LLM (Claude, or any OpenAI-compatible endpoint). Opt-in, off by
# default: `uv sync --extra cloud`. Lazy-imported; only needed when
# llm_provider="anthropic" or "openai".
cloud = [
    "anthropic>=0.40",
    "openai>=1.40",
]
# Optional GPU-accelerated STT (whisper.cpp, Metal on Apple Silicon). Lazy-imported;
# only needed when stt_engine="whisper_cpp". `uv sync --extra whispercpp`.
whispercpp = [
    "pywhispercpp>=1.2",
]
# MCP integration (opt-in, off by default). The official MCP client SDK; lazy-
# imported by autobot.mcp and only needed when allow_mcp is set. `uv sync --extra mcp`.
# Pinned below 2.0 — v2 is alpha and changes the OAuth callback signature.
mcp = [
    "mcp>=1.28,<2",
]
# macOS-native bits: echo cancellation via Voice-Processing (for barge-in) and the
# permission status checks. All lazy-imported and degrade gracefully off macOS.
# AVFoundation: AEC mic + Microphone status. ApplicationServices: AXIsProcessTrusted
# (Accessibility status). CoreServices: AEDeterminePermissionToAutomateTarget
# (Automation status). `uv sync --extra aec`.
aec = [
    "pyobjc-framework-AVFoundation>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-CoreServices>=10.0; sys_platform == 'darwin'",
]
# Build the standalone engine binary for the orb's sidecar (see packaging/). Only
# needed to produce a release bundle: `uv sync --extra freeze` then `make freeze`.
freeze = [
    "pyinstaller>=6.0",
]
# Repo-map symbol extraction (coding agent). tree-sitter grammars via the language
# pack; lazy-imported by tools/code/repomap.py and only needed to parse real source
# files — the value objects and renderer are pure and tested without it.
# `uv sync --extra code`.
code = [
    "tree-sitter-language-pack>=0.1",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[project.scripts]
autobot = "autobot.app:main"
autobot-daemon = "autobot.daemon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autobot"]

# Vendored silero VAD model (ONNX) shipped as package data so the wake/VAD path
# never needs the torch-heavy silero-vad package.
[tool.hatch.build.targets.wheel.force-include]
"src/autobot/io/silero_vad.onnx" = "autobot/io/silero_vad.onnx"

# --- uv -------------------------------------------------------------------
[tool.uv]
# Keep the dev tools in the default sync so `uv sync` gives a ready dev env.
default-groups = []

# --- Ruff (lint + format) -------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# PyInstaller .spec files are exec'd with injected globals (Analysis, EXE, SPECPATH);
# they're not normal modules, so don't lint them.
extend-exclude = ["packaging"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import order)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # prefer pathlib
    "RUF", # ruff-specific
    "D",   # pydocstyle
]
ignore = [
    "D100",  # module docstring not required everywhere (we add them anyway)
    "D104",  # package __init__ docstring optional
    "D107",  # __init__ docstring optional (documented at class level)
    "UP017", # keep datetime.timezone.utc (runs on 3.10 tooling too; identical on 3.11)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over docstring ceremony.
"tests/**" = ["D101", "D102", "D103", "D105"]
# Protocol contract + no-op stubs; the real impl (FileTranscript) is documented.
"src/autobot/session_log.py" = ["D102"]

[tool.ruff.format]
docstring-code-format = true

# --- mypy (static types) --------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]

# Third-party runtimes ship no type stubs; don't fail on their missing imports.
[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "huggingface_hub.*",
    "sounddevice.*",
    "ollama.*",
    "openwakeword.*",
    "onnxruntime.*",
    "piper.*",
    "ddgs.*",
    "fastapi.*",
    "uvicorn.*",
    "anthropic.*",
    "openai.*",
    "mcp.*",
    "pywhispercpp.*",
    "tree_sitter_language_pack.*",
    "objc.*",
    "AVFoundation.*",
    "ApplicationServices.*",
    "CoreServices.*",
    "Foundation.*",
]
ignore_missing_imports = true

# --- pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=autobot --cov-report=term-missing --cov-report=xml"
pythonpath = ["src"]
# Silence a third-party deprecation from Starlette's TestClient (it nudges toward
# 'httpx2'); it's emitted on import of fastapi.testclient and is out of our hands.
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:",
]

# --- coverage -------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["autobot"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.", # Protocol method bodies
]
