[package]
name = "jack-orb"
version = "0.1.0"
description = "Jack — floating voice-assistant orb (thin Tauri client of the autobot daemon)"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }

# macOS only: convert the orb window into a non-activating NSPanel so it can float
# over other apps' full-screen Spaces (a plain NSWindow can't, at any level). This
# is the established Tauri approach used by Spotlight-style overlays (Cap, etc.).
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
objc = "0.2"

# Smaller, faster release binary — this is just a thin UI shell.
[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
